Documentacion de funcion login

--- a/documentacion_backend_citec /.obsidian/app.json
+++ b/documentacion_backend_citec /.obsidian/app.json
@@ -1,7 +1,7 @@
 {
   "pdfExportSettings": {
     "includeName": true,
-    "pageSize": "Letter",
+    "pageSize": "Tabloid",
     "landscape": false,
     "margin": "0",
     "downscalePercent": 100
