--- a/backend_citec_ubb/tsconfig.json
+++ b/backend_citec_ubb/tsconfig.json
@@ -14,5 +14,5 @@
         "emitDecoratorMetadata": true
     },
     "include": ["src/**/*.ts"],
-    // "exclude": ["src/**/*.test.ts"] //Descomentar al momento de subir el proyecto
+    "exclude": ["src/**/*.test.ts"] //Descomentar al momento de subir el proyecto
 }
