--- a/backend_citec_ubb/package.json
+++ b/backend_citec_ubb/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "nodemon --exec ts-node src/index.ts",
         "build": "tsc",
-        "test": "jest --detectOpenHandles"
+        "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
     },
     "keywords": [
         "TS",
@@ -19,6 +19,7 @@
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.12",
         "@types/supertest": "^6.0.2",
+        "cross-env": "^7.0.3",
         "jest": "^29.7.0",
         "nodemon": "^3.1.4",
         "supertest": "^7.0.0",
