--- a/backend_citec_ubb/package.json
+++ b/backend_citec_ubb/package.json
@@ -1,7 +1,7 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "description": "backend para crud",
+    "description": "backend para crud citec ubb",
     "main": "index.js",
     "scripts": {
         "dev": "nodemon --exec ts-node src/index.ts",
@@ -9,8 +9,9 @@
         "test": "cross-env NODE_ENV=test jest --detectOpenHandles"
     },
     "keywords": [
-        "TS",
-        "PERN"
+        "TypeScript",
+        "Mysql",
+        "React Ts"
     ],
     "author": "Cesar Salazar",
     "license": "ISC",
