Se cambia ESNext en 'module' por CommonJS y 'moduleResolution' por Node en tsconfig.json

--- a/backend_citec_ubb/tsconfig.json
+++ b/backend_citec_ubb/tsconfig.json
@@ -4,8 +4,8 @@
         "rootDir": "./src",
         "lib":["ESNext"],
         "target": "ESNext",
-        "moduleResolution": "NodeNext",
-        "module":"NodeNext",
+        "moduleResolution": "Node",
+        "module": "CommonJS",  // Cambia a CommonJS
         "strict": false,
         "sourceMap": true,
         "esModuleInterop": true,
