--- a/backend_citec_ubb/package.json
+++ b/backend_citec_ubb/package.json
@@ -20,6 +20,8 @@
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.12",
         "@types/supertest": "^6.0.2",
+        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/swagger-ui-express": "^4.1.6",
         "cross-env": "^7.0.3",
         "jest": "^29.7.0",
         "nodemon": "^3.1.4",
@@ -36,6 +38,8 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-validator": "^7.1.0",
-        "mysql2": "^3.11.3"
+        "mysql2": "^3.11.3",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.1"
     }
 }
