--- a/backend_citec_ubb/package.json
+++ b/backend_citec_ubb/package.json
@@ -39,6 +39,7 @@
         "express": "^4.19.2",
         "express-validator": "^7.1.0",
         "mysql2": "^3.11.3",
+        "pdfkit": "^0.15.1",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1"
     }
